clusters/vollminlab-cluster/minio/minio/app/ingress-s3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-s3-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  labels:
    app: minio
    env: production
    category: storage
spec:
  ingressClassName: nginx
  rules:
    - host: s3.vollminlab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - s3.vollminlab.com
      secretName: wildcard-tls
