clusters/vollminlab-cluster/minio/minio/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: minio
    env: production
    category: storage
spec:
  ingressClassName: nginx
  rules:
  - host: minio.vollminlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio
            port:
              number: 9001
  tls:
  - hosts:
    - minio.vollminlab.com
    secretName: wildcard-tls
